--- a/assets/theme-styles/blog-layouts/grid-layouts.less
+++ b/assets/theme-styles/blog-layouts/grid-layouts.less
@@ -117,11 +117,11 @@
 .grid_3_column {
 	padding: 0 10px;
 	@media screen and (min-width: 768px) {
-		&:nth-child(odd) {	
+		&:nth-of-type(odd) {	
 			padding-right: 10px;
 			clear: none;
 		}
-		&:nth-child(3n+1) {
+		&:nth-of-type(3n+1) {
 			clear: left;
 		}
 	}
