Logo Height Width Fixed, Gitignore file added, Hanne Class Name Updated To Ih Business Pro

--- a/assets/theme-styles/sections/header.less
+++ b/assets/theme-styles/sections/header.less
@@ -81,4 +81,9 @@
 	@media screen and (max-width: 768px) {
 			float: none;
 		}
+	img {
+		max-height: 120px;
+		width: auto;
+		margin-right: 10px;
+	}
 }
