--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: IH Business Pro is a Premium Quality - Grade A WordPress Theme. Its
 Version: 0.9.4
 License: GNU General Public License
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
-Text Domain: 
+Text Domain: ih-business-pro
 Tags: custom-background, two-columns, one-column, custom-colors, flexible-header, right-sidebar, grid-layout, custom-menu, sticky-post, theme-options, threaded-comments, translation-ready, featured-images, photography, full-width-template, custom-header, footer-widgets, portfolio, blog, featured-image-header
 
 This theme, like WordPress, is licensed under the GPL.
