--- a/assets/theme-styles/sections/universal.less
+++ b/assets/theme-styles/sections/universal.less
@@ -2,6 +2,7 @@ body {
 	.body-font;
 	background: @background;
 	word-wrap: break-word;
+	overflow-x: hidden;
 }
 .mega-container {
 	background: @background;
