--- a/assets/theme-styles/sections/footer.less
+++ b/assets/theme-styles/sections/footer.less
@@ -54,6 +54,10 @@
 					&:hover {
 						color: @accent;
 					}
+					@media screen and (max-width: 767px){
+						font-size: 13px;
+						padding: 6px 2px;
+					}
 				}
 			}
 		}
