Mobile menu bug fixed.

--- a/assets/theme-styles/sections/menus.less
+++ b/assets/theme-styles/sections/menus.less
@@ -186,6 +186,7 @@
 		    background-image: none;
 		    -webkit-appearance: none;
 		    position: relative;
+			cursor: pointer;
 		    &:focus {
 		    	outline: none;
 		    }	
