--- a/assets/theme-styles/variables.less
+++ b/assets/theme-styles/variables.less
@@ -8,7 +8,7 @@
 @content: #777;
 @top-bar: #c6bba9;
 
-.body-font  {	font-family: "Quattrocento Sans", sans-serif; 	}
+.body-font  {	font-family: "Quattrocento Sans", serif; 	}
 .title-font {	font-family: "Ovo", sans-serif;	    }
  
 .layer {
