New Featured Area(About Us Added), Footer Settings Improved, Customizer Upgraded, Public Release v1.1.0

--- a/assets/theme-styles/sections/_init_sections.less
+++ b/assets/theme-styles/sections/_init_sections.less
@@ -2,6 +2,7 @@
 @import 'top-bar';
 @import 'header';
 @import 'hero';
+@import 'aboutus-hero';
 @import 'menus';
 @import 'sidebar';
 @import 'single';
